k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 2
  selector:
    matchLabels: { app: todo-app }
  template:
    metadata:
      labels: { app: todo-app }
    spec:
      containers:
        - name: todo-app
          image: todo-app:latest
          imagePullPolicy: Never
          ports: [{ containerPort: 8000 }]
