k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  selector: { app: todo-app }
  ports: [{ port: 80, targetPort: 8000 }]
